RESOLVED FIXED302710
[blocks-in-inline] Crash with internal table boxes
https://bugs.webkit.org/show_bug.cgi?id=302710
Summary [blocks-in-inline] Crash with internal table boxes
Antti Koivisto
Reported 2025-11-18 05:53:04 PST
IFC is confused by table boxes.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-18 05:53:17 PST
Antti Koivisto
Comment 2 2025-11-18 05:56:20 PST
EWS
Comment 3 2025-11-18 07:30:36 PST
Committed 303184@main (c437f05d3905): <https://commits.webkit.org/303184@main> Reviewed commits have been landed. Closing PR #54107 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.