[blocks-in-inline] Crash with internal table boxes https://bugs.webkit.org/show_bug.cgi?id=302710 rdar://164960756

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-table-internal-box.html
* LayoutTests/fast/inline/blocks-in-inline-table-internal-box-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-table-internal-box.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationBoxTreeUpdater.cpp:
(WebCore::LayoutIntegration::BoxTreeUpdater::adjustStyleIfNeeded):

Adjust style so table box display types don't get to IFC.

Canonical link: https://commits.webkit.org/303184@main