Source/WebCore/layout/integration/LayoutIntegrationBoxTreeUpdater.cpp
@@ -187,6 +187,11 @@ void BoxTreeUpdater::adjustStyleIfNeeded(const RenderElement& renderer, RenderSt
                 styleToAdjust.setOverflowX(anonBlockParentStyle.overflowX());
                 styleToAdjust.setOverflowY(anonBlockParentStyle.overflowY());
             }
+            if (renderer.isRenderTextControl()) {
+                // Something like <input style="appearance:none; display:table-header-group"> confuses IFC.
+                if (styleToAdjust.isInternalTableBox() || styleToAdjust.display() == DisplayType::TableCaption)
+                    styleToAdjust.setDisplay(DisplayType::Block);
+            }
             return;
         }
         if (auto* renderInline = dynamicDowncast<RenderInline>(renderer)) {
